# bot-constructor

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ae0e7b18c42d_initial_tables.py
backend/app/: enums.py  main.py
backend/app/auth/: api.py  schemas.py  services.py
backend/app/auth/dependencies/: auth_deps.py  services_deps.py
backend/app/auth/exceptions/: http_exceptions.py
backend/app/bots/: api.py  models.py  repositories.py  schemas.py  services.py  utils.py
backend/app/bots/dependencies/: repositories_deps.py  services_deps.py
backend/app/bots/exceptions/: http_exceptions.py  services_exceptions.py
backend/app/core/: database.py  routers.py  s3.py  security.py  settings.py
backend/app/core/config/: app.py  db.py  jwt.py  redis.py  s3.py
backend/app/core/dependencies/: db_deps.py  s3_deps.py  security_deps.py
backend/app/core/utils/: sqlalchemy.py
backend/app/scenarios/: api.py  models.py  repositories.py  services.py
backend/app/scenarios/dependencies/: repositories_deps.py  services_deps.py
backend/app/scenarios/exceptions/: http_exceptions.py  services_exceptions.py
backend/app/scenarios/schemas/: scenario.py  trigger.py
backend/app/telegram/: api.py  context.py  utils.py
backend/app/telegram/blocks/: base.py  content.py  delay.py  (+4 more)
backend/app/users/: api.py  models.py  repositories.py  schemas.py  services.py
backend/app/users_data/: models.py  repositories.py  schemas.py  services.py
(+63 files in other folders)
