[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.24.2",
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt==4.2.1",
    "fastapi>=0.117.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "slugify>=0.0.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
